--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,30 @@
+attrs==17.4.0
+beeprint==2.4.7
+certifi==2018.1.18
+chardet==3.0.4
+decorator==4.2.1
 diskcache==3.0.1
 filelock==3.0.4
+idna==2.6
+ipython-genutils==0.2.0
+jsonschema==2.6.0
+jupyter-core==4.4.0
+nbformat==4.4.0
 numpy==1.14.0
 pandas==0.22.0
+plotly==2.3.0
+pluggy==0.6.0
 ply==3.11
+py==1.5.2
 pyarrow==0.8.0
+pytest==3.4.0
 python-dateutil==2.6.1
 pytz==2018.3
+requests==2.18.4
+scikit-learn==0.19.1
+scipy==1.0.0
 six==1.11.0
+sklearn==0.0
+traitlets==4.3.2
+urllib3==1.22
+urwid==2.0.1
