--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,66 @@
+alabaster==0.7.10
 attrs==17.4.0
+auto-sklearn==0.3.0
+Babel==2.5.3
 beeprint==2.4.7
 certifi==2018.1.18
 chardet==3.0.4
+click==6.7
+ConfigSpace==0.4.4
+Cython==0.27.3
+dash==0.20.0
+dash-core-components==0.18.1
+dash-html-components==0.8.0
+dash-renderer==0.11.3
+dash-table-experiments==0.5.4
 decorator==4.2.1
 diskcache==3.0.1
+docutils==0.14
 filelock==3.0.4
+Flask==0.12.2
+Flask-Compress==1.4.0
 idna==2.6
+imagesize==1.0.0
 ipython-genutils==0.2.0
+itsdangerous==0.24
+Jinja2==2.10
+joblib==0.11
 jsonschema==2.6.0
 jupyter-core==4.4.0
+liac-arff==2.1.1
+lockfile==0.12.2
+MarkupSafe==1.0
 nbformat==4.4.0
+nose==1.3.7
 numpy==1.14.0
+packaging==16.8
 pandas==0.22.0
 plotly==2.3.0
 pluggy==0.6.0
 ply==3.11
+psutil==5.4.3
 py==1.5.2
 pyarrow==0.8.0
+Pygments==2.2.0
+pynisher==0.4.2
+pyparsing==2.2.0
+pyrfr==0.7.3
 pytest==3.4.0
 python-dateutil==2.6.1
 pytz==2018.3
+PyYAML==3.12
 requests==2.18.4
 scikit-learn==0.19.1
 scipy==1.0.0
 six==1.11.0
+sklearn==0.0
+smac==0.8.0
+snowballstemmer==1.2.1
+Sphinx==1.7.0
+sphinx-rtd-theme==0.2.4
+sphinxcontrib-websupport==1.0.1
 traitlets==4.3.2
+typing==3.6.4
 urllib3==1.22
 urwid==2.0.1
+Werkzeug==0.14.1
